src/objects/Gift_Entry_Field_Mapping__mdt.object
<CustomObject>
    <description>Mapping configuration for dynamically displayed fields on supported Gift Entry forms.</description>
    <fields>
        <fullName>Controlling_Field__c</fullName>
        <description>The field on the controlling object that controls which fields are dynamically displayed.</description>
        <inlineHelpText>The field on the controlling object that controls which fields are dynamically displayed.</inlineHelpText>
        <label>Controlling Field</label>
        <metadataRelationshipControllingField>Gift_Entry_Field_Mapping__mdt.Controlling_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Gift_Entry_Field_Mappings</relationshipLabel>
        <relationshipName>Gift_Entry_Field_Mappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Controlling_Object__c</fullName>
        <description>The object containing the field that controls which fields are dynamically displayed.</description>
        <inlineHelpText>The object containing the field that controls which fields are dynamically displayed.</inlineHelpText>
        <label>Controlling Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Gift_Entry_Field_Mappings</relationshipLabel>
        <relationshipName>Gift_Entry_Field_Mappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Dependent_Field_List__c</fullName>
        <description>JSON-formatted metadata that identifies the Controlling Field values for the form layout and the fields those values expose.</description>
        <inlineHelpText>JSON-formatted metadata that identifies the Controlling Field values for the form layout and the fields those values expose.</inlineHelpText>
        <label>Dependent Field List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Gift Entry Field Mapping</label>
    <pluralLabel>Gift Entry Field Mappings</pluralLabel>
</CustomObject>